// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox.ts should render checked component and match snapshot 1`] = `
<div class="checkbox checkbox--active">
  <!---->
  <div class="checkbox__control">
    <div class="checkbox__control__input"><input id="checkbox-1" class="checkbox__input" type="checkbox" value="false" role="checkbox" aria-checked="true">
      <div class="checkbox__control__icon"><i class="icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="20px" width="20px" role="img" aria-hidden="true" style="font-size: 20px; height: 20px; width: 20px;">
            <g fill="currentColor">
              <path d="m20.003 8.552-8.871 8.827L4.8 11.188l2.517-2.574 3.793 3.709L17.464 6l2.54 2.552z"></path>
            </g>
          </svg></i></div>
    </div><label for="checkbox-1" class="checkbox__label">Label</label>
  </div>
  <!---->
</div>
`;

exports[`Checkbox.ts should render component and match snapshot 1`] = `
<div class="checkbox">
  <!---->
  <div class="checkbox__control">
    <div class="checkbox__control__input"><input id="checkbox-1" class="checkbox__input" type="checkbox" value="false" role="checkbox" aria-checked="false">
      <div class="checkbox__control__icon"><i class="icon" aria-hidden="true" style="display: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="20px" width="20px" role="img" aria-hidden="true" style="font-size: 20px; height: 20px; width: 20px;">
            <g fill="currentColor">
              <path d="m20.003 8.552-8.871 8.827L4.8 11.188l2.517-2.574 3.793 3.709L17.464 6l2.54 2.552z"></path>
            </g>
          </svg></i></div>
    </div><label for="checkbox-1" class="checkbox__label">Label</label>
  </div>
  <!---->
</div>
`;

exports[`Checkbox.ts should render component with disabled prop and match snapshot 1`] = `
<div class="checkbox checkbox--disabled">
  <!---->
  <div class="checkbox__control">
    <div class="checkbox__control__input"><input disabled="" id="checkbox-1" class="checkbox__input" type="checkbox" value="false" role="checkbox" aria-checked="false">
      <div class="checkbox__control__icon"><i class="icon" aria-hidden="true" style="display: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="20px" width="20px" role="img" aria-hidden="true" style="font-size: 20px; height: 20px; width: 20px;">
            <g fill="currentColor">
              <path d="m20.003 8.552-8.871 8.827L4.8 11.188l2.517-2.574 3.793 3.709L17.464 6l2.54 2.552z"></path>
            </g>
          </svg></i></div>
    </div><label for="checkbox-1" class="checkbox__label">Label</label>
  </div>
  <!---->
</div>
`;

exports[`Checkbox.ts should render component with indeterminate prop and match snapshot 1`] = `
<div class="checkbox checkbox--indeterminate">
  <!---->
  <div class="checkbox__control">
    <div class="checkbox__control__input"><input id="checkbox-1" class="checkbox__input" type="checkbox" value="false" role="checkbox" aria-checked="mixed">
      <div class="checkbox__control__icon"><i class="icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="20px" width="20px" role="img" aria-hidden="true" style="font-size: 20px; height: 20px; width: 20px;">
            <g fill="currentColor">
              <path d="M7.2 10.8h9.6v2.4H7.2v-2.4z"></path>
            </g>
          </svg></i></div>
    </div><label for="checkbox-1" class="checkbox__label">Label</label>
  </div>
  <!---->
</div>
`;

exports[`Checkbox.ts should render component with label prop and match snapshot 1`] = `
<div class="checkbox"><label id="label-1" for="checkbox-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Input label</div>
      </div>
      <!---->
    </div>
  </label>
  <div class="checkbox__control">
    <div class="checkbox__control__input"><input id="checkbox-1" class="checkbox__input" type="checkbox" value="false" role="checkbox" aria-checked="false">
      <div class="checkbox__control__icon"><i class="icon" aria-hidden="true" style="display: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="20px" width="20px" role="img" aria-hidden="true" style="font-size: 20px; height: 20px; width: 20px;">
            <g fill="currentColor">
              <path d="m20.003 8.552-8.871 8.827L4.8 11.188l2.517-2.574 3.793 3.709L17.464 6l2.54 2.552z"></path>
            </g>
          </svg></i></div>
    </div><label for="checkbox-1" class="checkbox__label">Checkbox label</label>
  </div>
  <!---->
</div>
`;

exports[`Checkbox.ts should render component with name, required, readonly props and match snapshot 1`] = `
<div class="checkbox checkbox--readonly">
  <!---->
  <div class="checkbox__control">
    <div class="checkbox__control__input"><input name="simple-input" required="" readonly="" id="checkbox-1" class="checkbox__input" type="checkbox" value="false" role="checkbox" aria-checked="false">
      <div class="checkbox__control__icon"><i class="icon" aria-hidden="true" style="display: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="20px" width="20px" role="img" aria-hidden="true" style="font-size: 20px; height: 20px; width: 20px;">
            <g fill="currentColor">
              <path d="m20.003 8.552-8.871 8.827L4.8 11.188l2.517-2.574 3.793 3.709L17.464 6l2.54 2.552z"></path>
            </g>
          </svg></i></div>
    </div><label for="checkbox-1" class="checkbox__label">Label</label>
  </div>
  <!---->
</div>
`;

exports[`Checkbox.ts should render focused component and match snapshot 1`] = `
<div class="checkbox checkbox--focused">
  <!---->
  <div class="checkbox__control">
    <div class="checkbox__control__input"><input id="checkbox-1" class="checkbox__input" type="checkbox" value="false" role="checkbox" aria-checked="false">
      <div class="checkbox__control__icon"><i class="icon" aria-hidden="true" style="display: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="20px" width="20px" role="img" aria-hidden="true" style="font-size: 20px; height: 20px; width: 20px;">
            <g fill="currentColor">
              <path d="m20.003 8.552-8.871 8.827L4.8 11.188l2.517-2.574 3.793 3.709L17.464 6l2.54 2.552z"></path>
            </g>
          </svg></i></div>
    </div><label for="checkbox-1" class="checkbox__label">Label</label>
  </div>
  <!---->
</div>
`;
